# skll

./: .coverage.rc  .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  DistributeTests.ps1  LICENSE.txt  MANIFEST.in  README.md  README.rst  _.isort.cfg  _.pep8speaks.yml  __init__.py  appveyor.yml  arff_to_megam.py  azure-pipelines.yml  classifier.py  cleanup_evaluate.sh  cleanup_predict.sh  conda.yaml  conda_requirements.txt  csv_to_megam.py  data.py  evaluate.py  example.cfg  featureset.template.py  filter_megam.py  generate_predictions.py  join_megam.py  learner.py  liblinear_experimenter.py  megam_to_arff.py  megam_to_libsvm.py  metrics.py  output_formatter.py  (+14 more)
.github/: stale.yml
conda-recipe/: README.md
configs/: example.cfg
doc/: Makefile  abc.ABCMeta-class.html  api-objects.txt  api.rst  class-tree.html  classifier-module.html  classifier-pysrc.html  classifier.Classifier-class.html  classifier.RescaledRegressionMixin-class.html  classifier.RescaledRidge-class.html  classifier.RescaledSVR-class.html  classifier.SelectByMinCount-class.html  conf.py  contributing.rst  custom_metrics.rst  generate_predictions-module.html  generate_predictions-pysrc.html  generate_predictions.Predictor-class.html  getting_started.rst  help.html  identifier-index.html  index.html  index.rst  internal.rst  learner-module.html  learner-pysrc.html  learner.Learner-class.html  learner.RescaledRegressionMixin-class.html  learner.RescaledRidge-class.html  learner.RescaledSVR-class.html  learner.SelectByMinCount-class.html  make.bat  metrics-module.html  metrics-pysrc.html  module-tree.html  print_model_weights-module.html  print_model_weights-pysrc.html  redirect.html  requirements.txt  run_ablation-module.html  (+8 more)
examples/: Tutorial.ipynb  __init__.py  cross_val.cfg  evaluate.cfg  example.cfg  make_boston_example_data.py  make_california_example_data.py  make_example_boston_data.py  make_example_iris_data.py  make_iris_example_data.py  make_titanic_example_data.py
scripts/: arff_to_megam  csv_to_megam  filter_megam  generate_predictions  join_megam  megam_to_arff  megam_to_csv  megam_to_libsvm  print_model_weights  run_experiment  run_experiment.py  skll_convert  split_megam  summarize_results
shippable/: install_sge.sh  queue_template
skll/: __init__.py  config.py  data.py  experiments.py  fixed_standard_scaler.py  generate_predictions.py  learner.py  logutils.py  metrics.py  run_ablation.py  transformer.py  types.py  version.py
tests/: __init__.py  test_ablation.py  test_classification.py  test_commandline_utils.py  test_custom_learner.py  test_custom_metrics.py  test_cv.py  (+34 more)
(+317 files in other folders)
